istio/bookinfo/15.bookinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress-user01
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "bookinfo.user01.cloud.34.111.106.168.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingress
            port:
              number: 80
